--- a/categories.html
+++ b/categories.html
@@ -3,19 +3,19 @@ layout: main
 title: Categories
 permalink: /categories/
 ---
-{% capture site_categories %}{% for categorie in site.categories %}{{ categorie | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
-{% assign categorie_words = site_categories | split:',' | sort %}
+{% capture site_categories %}{% for category in site.categories %}{{ category | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+{% assign category_words = site_categories | split:',' | sort %}
 
 <section class="blog-tags">
   <h1>Categories</h1>
   <ul class="tags">
 <!--  cycles through tag list and creates header row of all tags used in site with accompanying per-tag counts...-->
-  {% for this_word in categorie_words %}
+  {% for this_word in category_words %}
     <li ><a href="#{{ this_word | cgi_escape }}" class="tag">{{ this_word }} <span>({{ site.categories[this_word].size }})</span></a></li>
   {% endfor %}
   </ul>
 <!--cycles through tag list and creates subheader for each tag name...-->
-  {% for this_word in categorie_words %}
+  {% for this_word in category_words %}
   <h2 id="{{ this_word | cgi_escape }}">{{ this_word }}</h2>
 <!--  lists all posts corresponding to specific tag...-->
     {% for post in site.categories[this_word] %}{% if post.title != null %}
